unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/bt_stripe__Stripe_Billing_Component_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Blackthorn Pay-Stripe Billing Component</label>
</CustomObject>