unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Default_Days_Until_Due__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Default_Days_Until_Due__c</fullName>
    <inlineHelpText>Set the default value of ‘Days until Due’ for Subscription Invoices.</inlineHelpText>
    <label>Default Days Until Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>