unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Coupon_Creation__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Coupon_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to create new Coupons (discounts) during Subscription creation.</inlineHelpText>
    <label>Disable Coupon Creation</label>
    <type>Checkbox</type>
</CustomField>