unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Coupon_Select__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Coupon_Select__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to select Coupons (discounts) during Subscription creation.</inlineHelpText>
    <label>Disable Coupon Selection</label>
    <type>Checkbox</type>
</CustomField>