unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Payment_Gateway_Customer_Create__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Payment_Gateway_Customer_Create__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the ability to create Payment Gateway Customers.</inlineHelpText>
    <label>Disable Customer Creation</label>
    <type>Checkbox</type>
</CustomField>