unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Push_to_Stripe__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Push_to_Stripe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to push the Subscription to Stripe during creation.</inlineHelpText>
    <label>Disable Push to Stripe</label>
    <type>Checkbox</type>
</CustomField>