unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Set_Billing_Cycle_Anchor__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Set_Billing_Cycle_Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to set the Billing Cycle Anchor on a Subscription.</inlineHelpText>
    <label>Disable Set Billing Cycle Anchor</label>
    <type>Checkbox</type>
</CustomField>