unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Subscription_backdating__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Subscription_backdating__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to backdate the Start Date of Subscriptions during creation.</inlineHelpText>
    <label>Disable Subscription backdating</label>
    <type>Checkbox</type>
</CustomField>