unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Disable_Trials__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Disable_Trials__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Disables the option to set a Trial End Date during Subscription creation.</inlineHelpText>
    <label>Disable Trials</label>
    <type>Checkbox</type>
</CustomField>