unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Intro_Screen_Text__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Intro_Screen_Text__c</fullName>
    <inlineHelpText>Customize the introduction screen text shown to users creating new Subscriptions.</inlineHelpText>
    <label>Intro Screen Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>