unpackaged/main/default/objects/bt_stripe__Stripe_Billing_Component_Settings__c/fields/bt_stripe__Use_Default_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Use_Default_Payment_Gateway__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically uses the default Payment Gateway while creating subscription.</inlineHelpText>
    <label>Use Default Payment Gateway</label>
    <type>Checkbox</type>
</CustomField>